@@ -186,6 +186,7 @@ PREDEFINED             = DOXYGEN_IGNORE_THIS \
                          CAIRO_HAS_PS_SURFACE \
                          CAIRO_HAS_SVG_SURFACE \
                          CAIRO_HAS_GLITZ_SURFACE \
+                         CAIRO_HAS_QUARTZ_SURFACE \
                          CAIRO_HAS_PNG_FUNCTIONS
 EXPAND_AS_DEFINED      = 
 SKIP_FUNCTION_MACROS   = YES
